--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
-.navbar {
-  background-color: #333;
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
+  background-color: #333;
 }
 
-.navbar a {
+nav ul li {
   float: left;
+}
+
+nav ul li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 20px;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
+nav ul li a:hover {
+  background-color: #111;
 }
